...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEditMemberHotel"
        android:layout_marginTop="40dp"
        android:text="Member Hotel"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFasilitas"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:hint="Fasilitas"
        android:minHeight="48dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEditMemberHotel"
        />


    <EditText
        android:id="@+id/etMembership"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:hint="Membership"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFasilitas"
        />


    <EditText
        android:id="@+id/etTanggal"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:hint="Tanggal"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMembership"
        />


    <EditText
        android:id="@+id/etDurasi"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:hint="Durasi"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
...
        />

    <com.google.android.material.button.MaterialButton
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:id="@+id/btnSave"
        android:layout_width="300dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:startIconDrawable="@drawable/ic_baseline_date_range_24"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/etDurasi"
        app:layout_constraintStart_toStartOf="parent"
        android:text="SAVE MEMBER HOTEL" />

    <com.google.android.material.button.MaterialButton
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btnUpdate"
...
